--- a/myzarrinpal.html
+++ b/myzarrinpal.html
@@ -16,7 +16,7 @@
         <div class="zarinpal-right">
           <div class="zarinpal-content">
             <div class="zarinpal-content__header d-flex">
-              <img src="/images/logo-white.svg" alt="logo" />
+              <img src="./images/logo-white.svg" alt="logo" />
               <a href="#" class="text-decoration-none">ورود با رمزینه</a>
             </div>
             <div class="zarinpal-content__body">
