--- a/contactus.html
+++ b/contactus.html
@@ -276,7 +276,7 @@
         </div>
       </div>
       <div class="info-left">
-        <img src="/images/map.png" alt="" />
+        <img src="./images/map.png" alt="" />
       </div>
     </section>
     <!-- New Box-->
@@ -288,7 +288,7 @@
     <section class="contact-us container">
       <div class="contact-us-box d-flex">
         <div class="contact-us-right">
-          <img src="/images/phone.svg" alt="phone" />
+          <img src="./images/phone.svg" alt="phone" />
         </div>
         <div class="contact-us-left">
           <div class="contact-us-left__content">
@@ -368,19 +368,19 @@
           <h3>زرین‌پال در شبکه‌های اجتماعی:</h3>
           <div class="social-link d-flex">
             <a href="#">
-              <img src="../images/instagram.svg" alt="instagram" />
+              <img src="./images/instagram.svg" alt="instagram" />
             </a>
             <a href="#">
-              <img src="../images/twitter.svg" alt="twitter" />
+              <img src="./images/twitter.svg" alt="twitter" />
             </a>
             <a href="#">
-              <img src="../images/telegram.svg" alt="telegram" />
+              <img src="./images/telegram.svg" alt="telegram" />
             </a>
             <a href="#">
-              <img src="../images/linkedin.svg" alt="linkdin" />
+              <img src="./images/linkedin.svg" alt="linkdin" />
             </a>
             <a href="#">
-              <img src="../images/aparat.svg" alt="aparat" />
+              <img src="./images/aparat.svg" alt="aparat" />
             </a>
           </div>
         </div>
