--- a/contactus.html
+++ b/contactus.html
@@ -35,7 +35,7 @@
       <section class="header-bottom d-flex container">
         <div class="header-bottom__right d-flex">
           <div class="logo d-flex">
-            <img src="../images/logo-white.svg" alt="logo" />
+            <img src="./images/logo-white.svg" alt="logo" />
           </div>
         </div>
         <div class="header-bottom__left d-flex">
