--- a/contactus.html
+++ b/contactus.html
@@ -387,5 +387,6 @@
       </div>
       <div class="footer-bottom letter-spacing">© ‌‌زرین‌پال ۱۴۰۳-۱۳۸۹</div>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
